--- a/stylesheet.CSS
+++ b/stylesheet.CSS
@@ -2,7 +2,7 @@ body{
 	text-align: center;
 	font-family: arial;
 	margin: 0 auto; 
-	background-color: #A3A66D;
+	background-color: #009999;
 }
 
 .container{
@@ -11,7 +11,7 @@ body{
 }
 
 h1{
-	color: red;
+	color: black;
 }
 
 img { 
