--- a/stylesheet.CSS
+++ b/stylesheet.CSS
@@ -21,6 +21,6 @@ width: 60%;
 h2 { 
 	color: #009999;
 	border: 1px solid black;
-	margin: 50px;
-	padding: 30px;
+	/*margin: 50px;
+	padding: 30px; */
  }
