--- a/stylesheet.CSS
+++ b/stylesheet.CSS
@@ -5,10 +5,10 @@ body{
 	background-color: #009999;
 }
 
-.container{
+/* .container{
 	width: 80%;
 	margin 0 auto; 
-}
+}*/
 
 h1{
 	color: black;
